test/valid/Logic/Implication.plume
/**
 * Class to calculate the logical implication operation
 * @author 35237, Marcos Vasco
 */
class Implication extends BinaryLogicalOperation is
  
  method override calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == true && val2 == false then false
    else true